# jotas-arcade

./: .gitignore  1.index.js  2.index.js  Cargo.toml  README.md  game.html  index.html  index.js  package.json  pkg_index_js.index.js  run.sh  vendors-node_modules_text-encoding_index_js.index.js  webpack.config.js
.github/workflows/: cd.yml
assets/style/: main.css
games/demo/: Cargo.toml
games/demo/src/: ball.rs  components.rs  lib.rs  paddle.rs
public/: game.html  index.html
rust/games/demo/: Cargo.toml
rust/games/demo/src/: ball.rs
src/: components.rs  events.js  index.js  lib.rs  main.rs  paddle.rs
src/javascript/: index.js
src/style/: main.css
