[package]
name = "jotas-arcade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
] }
wasm-bindgen = "0.2.83"
